# selenium-tabs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  bandit.yaml  example.py  log_config.yaml  pyproject.toml  pytest.ini  requirements.txt  settings.py  tox.ini
.cursor/rules/: agents.mdc  project.mdc  python.mdc  quality.mdc
.cursor/skills/quality-gate/: SKILL.md
.cursor/skills/review/: SKILL.md
.cursor/skills/work-on/: SKILL.md
.github/workflows/: ci.yml  python-publish.yml  semantic-release.yml
.trunk/: trunk.yaml
docs/: test_coverage.md
examples/: example.py  schedule_tasks.py
requirements/: base.txt  dev.txt
seleniumtabs/: __init__.py  browser.py  browser_management.py  css_selectors.py  element_selectors.py  exceptions.py  read_envs.py  schedule_tasks.py  session.py  settings.py  tabs.py  wait.py
seleniumtabs/js_scripts/: scripts.py
seleniumtabs/log_config/: log_config.yaml
seleniumtabs/tests/: conftest.py  test_basic_function.py  test_task_schedular.py  test_task_scheduler.py  test_yahoo.py
seleniumtabs/utils/: core.py  urls.py
simpleselenium/: __init__.py  browser.py  element_selectors.py  exceptions.py  scripts.py  selenium_requests.py  session.py  settings.py  tabs.py  test_basic_function.py
simpleselenium/js_scripts/: scripts.py
simpleselenium/tests/: test_yahoo.py
tests/: conftest.py  test_basic_function.py  test_local_browser.py  test_schedule_tasks.py  test_session_cleanup.py  test_tabs.py  test_utils.py
tests/fixtures/pages/: basic.html
tests/integration/: test_live_sites.py
utility_scripts/: tox_utility.sh
