[tool.black]
line-length = 100
target-version = ['py36', "py37", "py38",]
experimental_string_processing = true
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.tox
  |Dockerfile
  |Jenkinfile
  | _build
  | dist
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.poetry]
name = "simpleselenium"
version = "0.1.0"
description = "Python package to easily work with Selenium."
authors = ["Vishal Kumar Mishra <vishal.k.mishra2@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TheConfused/simpleselenium"
repository = "https://github.com/TheConfused/simpleselenium"
keywords = ["selenium", "selenium python", "selenium python automation", "python automation"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "3.141.0"
pre-commit = "^2.15.0"
black = "^21.9b0"
tox = "^3.24.4"
pytest-env = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
