[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seleniumtabs"
version = "2.2.0"
description = "Selenium with tab management in Python"
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Vishal Kumar Mishra", email = "vishal.k.mishra2@gmail.com" },
]
keywords = [
  "browser-automation",
  "python-automation",
  "selenium",
  "selenium-python",
  "selenium-tabs",
  "tab-management",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "browserjquery>=2.0.1,<3.0.0",
  "django-environ>=0.11.2",
  "fake-useragent>=2.2.0,<3.0.0",
  "pyquery>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",
  "schedule>=1.2.2",
  "selenium>=4.12.0",
  "tldextract>=5.1.2,<6.0.0",
  "webdriver-manager>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/inquilabee/selenium-tabs"
Repository = "https://github.com/inquilabee/selenium-tabs"
Issues = "https://github.com/inquilabee/selenium-tabs/issues"
Changelog = "https://github.com/inquilabee/selenium-tabs/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "codespell>=2.4.2",
  "mdformat>=0.7.22",
  "mypy>=1.18.0",
  "pre-commit>=4.6.0",
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.11.13,<0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seleniumtabs*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
seleniumtabs = ["log_config/*.yaml"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = [
  "-m",
  "not integration",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
]
markers = [
  "integration: tests that require a live browser, external websites, or network access",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["B", "C4", "C901", "E", "F", "I", "UP"]
ignore = [
  "E501", # line length is enforced by formatter where practical
]

[tool.ruff.lint.isort]
known-first-party = ["seleniumtabs"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", "tests"]
skips = [
  "B101", # asserts document tab/session invariants in this library
  "B113", # retained for compatibility with tools that may inspect requests-like patterns
  "B311", # random waits/clicks intentionally simulate human browser interaction
]

[tool.codespell]
skip = "*.lock,uv.lock,.venv,build,dist"
ignore-words-list = "imporvements"

[tool.coverage.run]
branch = true
source = ["seleniumtabs"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 45
precision = 1
show_missing = true
